objects/Round_Robin_Queue__c.object
<CustomObject>
    <description>Custom object to capture round robin queue assignment for leads and date/time stamps of last lead received.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Lead_Received_Date_Time__c</fullName>
        <label>Last Lead Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Lead.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>HomeOwner, HomeBuyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Round Robin</relationshipLabel>
        <relationshipName>Round_Robin_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Program Specialist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Round_Robin_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Round Robin</label>
    <listViews>
        <fullName>Round_Robin_Assignment_List</fullName>
        <columns>User__c</columns>
        <columns>Lead__c</columns>
        <columns>Last_Lead_Received_Date_Time__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>Round Robin Assignment List</label>
    </listViews>
    <nameField>
        <displayFormat>RR- {000}</displayFormat>
        <label>Round Robin Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>